--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -31,6 +31,10 @@
                     <ul class="dropdown-menu">
                         <li ui-sref-active="active" ><a ui-sref="ciudad" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.ciudad">Ciudad</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="categoria" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.categoria">Categoria</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="producto" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.producto">Producto</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
