--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -35,6 +35,10 @@
                         &#xA0;<span translate="global.menu.entities.categoria">Categoria</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="producto" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.producto">Producto</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="anuncio" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.anuncio">Anuncio</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="opinion" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.opinion">Opinion</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
