--- a/src/main/webapp/loginStyle.css
+++ b/src/main/webapp/loginStyle.css
@@ -134,14 +134,14 @@ button{
 }
 }
 
-.bg-bubbles{
+.bg-bubbles {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-
     z-index: 1;
+}
 
 li{
     position: absolute;
