--- a/src/main/webapp/CSS/flipIndice.css
+++ b/src/main/webapp/CSS/flipIndice.css
@@ -89,3 +89,11 @@
     width:60px;
     height:60px;
 }
+
+#titulo img{
+    position:absolute;
+    top:0;
+    left:100px;
+    width:150px;
+    height:60px;
+}
