--- a/src/main/webapp/CSS/loginStyle.css
+++ b/src/main/webapp/CSS/loginStyle.css
@@ -41,11 +41,10 @@ body :-ms-input-placeholder {
     background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
     background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 0;
     width: 100%;
-    height: 400px;
-    margin-top: -200px;
+    height: 100%;
     overflow: hidden;
 }
 .wrapper.form-success .container h1 {
@@ -239,11 +238,13 @@ form button:hover {
     font-size: 25px;
 }
 
-.bton>#register:hover{
-    color:black;
+#login, #register, #btonlogin{
+    cursor:pointer;
 }
 
-#login{
-    margin-left: 5%;
-    cursor:pointer;
+#logform{
+    display:none;
+    position:absolute;
+    left: 44%;
+    top: 28%;
 }
