--- a/src/main/webapp/CSS/flipIndice.css
+++ b/src/main/webapp/CSS/flipIndice.css
@@ -34,10 +34,10 @@
     perspective: 900px;
     width: 150px;
     cursor:pointer;
-    position:absolute;
+    /*position:absolute;
     margin-top:18.5%;
     margin-left:34.3%;
-    display:none;
+    display:none;*/
 }
 
 .card{
@@ -96,4 +96,20 @@
     left:100px;
     width:150px;
     height:60px;
+}
+
+#lout>.card>*{
+    background-color: red !important;
+}
+
+.cartas{
+    margin-left:30%;
+}
+
+#fila1{
+    margin-top:50px;
+}
+
+#fila2{
+    margin-top:50px;
 }
