--- a/src/main/webapp/CSS/loginStyle.css
+++ b/src/main/webapp/CSS/loginStyle.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
+/*@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,27 +11,27 @@ body {
     font-weight: 300;
 }
 body ::-webkit-input-placeholder {
-    /* WebKit browsers */
+    WebKit browsers
     font-family: 'Source Sans Pro', sans-serif;
     color: white;
     font-weight: 300;
 }
 body :-moz-placeholder {
-    /* Mozilla Firefox 4 to 18 */
+    Mozilla Firefox 4 to 18
     font-family: 'Source Sans Pro', sans-serif;
     color: white;
     opacity: 1;
     font-weight: 300;
 }
 body ::-moz-placeholder {
-    /* Mozilla Firefox 19+ */
+     Mozilla Firefox 19+
     font-family: 'Source Sans Pro', sans-serif;
     color: white;
     opacity: 1;
     font-weight: 300;
 }
 body :-ms-input-placeholder {
-    /* Internet Explorer 10+ */
+    Internet Explorer 10+
     font-family: 'Source Sans Pro', sans-serif;
     color: white;
     font-weight: 300;
@@ -52,15 +52,8 @@ body :-ms-input-placeholder {
     transform: translateY(85px);
 }
 .container {
-    max-width: 600px;
     margin: 0 auto;
-    padding: 80px 0;
-    height: 400px;
     text-align: center;
-    position:absolute;
-    left: 40%;
-    top: 32%;
-
 }
 .container h1 {
     font-size: 40px;
@@ -88,7 +81,7 @@ form input {
     margin: 0 auto 10px auto;
     display: block;
     text-align: center;
-    font-size: 18px;
+    font-size: 100%;
     color: white;
     -webkit-transition-duration: 0.25s;
     transition-duration: 0.25s;
@@ -100,7 +93,6 @@ form input:hover {
 form input:focus {
     background-color: white;
     width: 300px;
-    color: #53e3a6;
 }
 form button {
     -webkit-appearance: none;
@@ -257,3 +249,13 @@ form button:hover {
 a{
     color:white;
 }
+
+#hogar{
+    position:fixed;
+    top:0;
+}
+
+#hogar>img{
+    width:20%;
+}
+*/
