--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -39,6 +39,10 @@
                         &#xA0;<span translate="global.menu.entities.opinion">Opinion</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="votacion" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.votacion">Votacion</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="post" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.post">Post</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="voto_post" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.voto_post">Voto post</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
