Añadido boton inbox

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -116,4 +116,10 @@
             </ul>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-4">
+            <a class="glyphicon glyphicon-inbox" ui-sref="mensaje" style="font-size:200%; color:lightgray; text-decoration:none" onmouseenter="$('#inbox').slideToggle('slow')" onmouseleave="$('#inbox').slideToggle('slow')"><span id='inbox' style="display:none">Inbox</span></a>
+        </div>
+    </div>
+</div>
 </nav>
